--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -4,7 +4,9 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                messages.properties,\
-               .options
+               .options,\
+               lib/edu.mit.jwi_2.1.5.jar,\
+               lib/intt.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
