1. Add some tests for page ranking algorithm 2. Take page ranking algorithm into the similarity calculation, but the effect seems very moderate. 3. Adjust the similarity calculation from Euclidean distance to cosine value.

--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -6,7 +6,9 @@ bin.includes = .,\
                messages.properties,\
                .options,\
                lib/edu.mit.jwi_2.1.5.jar,\
-               lib/intt.jar
+               lib/intt.jar,\
+               lib/javabuilder.jar,\
+               lib/pageranking.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
