1. Add a "Reflexactoring" perpective. 2. Add a Refactoring Suggestion view. 3. Support adding heuristic mapping rules when user drag and drop a type into module. However, when user drag a type out of a module, the corresponding removing function has not been supported yet.

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -653,6 +653,22 @@
             name="Heuristic Mapping"
             restorable="true">
       </view>
+      <view
+            class="reflexactoring.diagram.view.RefactoringSuggestionView"
+            icon="icons/view/recommend.gif"
+            id="reflexactoring.diagram.view.suggestion"
+            name="Refactoring Suggestion"
+            restorable="true">
+      </view>
+   </extension>
+   <extension
+         point="org.eclipse.ui.perspectives">
+      <perspective
+            class="reflexactoring.diagram.perspective.ReflexactoringPerspective"
+            icon="icons/perspective/reflexactoring.gif"
+            id="reflexactoring.diagram.perspective.refleactoring"
+            name="Reflexactoring">
+      </perspective>
    </extension>
 
    <!-- optionally, specify keybindings -->
