Finally make it possible to run matlab optimization solver (BONMIN) from java program. It is not easy!!!
However, it need more tests in the following days.

In addition, in WIN8.1, the windows defender will report that Repplock
is virus or trojan. The user need to add such a file into "the allowed
project" in order to run this program successfully.

--- a/reflexactoring.diagram/.classpath
+++ b/reflexactoring.diagram/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/javabuilder.jar"/>
 	<classpathentry kind="lib" path="lib/pageranking.jar"/>
+	<classpathentry kind="lib" path="lib/optimization.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
