Decide the structure of Suggestion object, and do some refactoring to make clear the concept of refactoring recommending function.

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -619,7 +619,7 @@
                tooltip="Decide the scope of refactoring">
          </action>
          <action
-               class="reflexactoring.diagram.action.RecommendRefactoringAction"
+               class="reflexactoring.diagram.action.recommend.RecommendRefactoringAction"
                icon="icons/menu/recommend.gif"
                id="reflexactoring.diagram.action.recommendRefacotring"
                label="Recommend Refactoring"
