--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -654,6 +654,7 @@
             restorable="true">
       </view>
       <view
+            category="reflexactoring.diagram.view.category"
             class="reflexactoring.diagram.view.RefactoringSuggestionView"
             icon="icons/view/recommend.gif"
             id="reflexactoring.diagram.view.suggestion"
