--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -8,7 +8,8 @@ bin.includes = .,\
                lib/edu.mit.jwi_2.1.5.jar,\
                lib/intt.jar,\
                lib/javabuilder.jar,\
-               lib/pageranking.jar
+               lib/pageranking.jar,\
+               lib/optimization.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
