finish Issue #17: Support Module Name Editing

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -72,7 +72,7 @@
          <action
                class="reflexactoring.diagram.action.popup.EditModuleDescriptionAction"
                id="reflexactoring.diagram.action.editdescription"
-               label="Edit Description">
+               label="Edit Name or Description">
          </action>
       </objectContribution>
    </extension>
