Complete a general framework for genetic algorithm, in this version, I adapt roulette wheel selection and better-gene-reserved crossover. I will ajust the parameters in the following revisions.

--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -9,7 +9,8 @@ bin.includes = .,\
                lib/intt.jar,\
                lib/javabuilder.jar,\
                lib/pageranking.jar,\
-               lib/optimization.jar
+               lib/optimization.jar,\
+               lib/Jama-1.0.3.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
