--- a/reflexactoring.diagram/.classpath
+++ b/reflexactoring.diagram/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry exported="true" kind="lib" path="lib/Jama-1.0.3.jar" sourcepath="lib/Jama-1.0.3.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/edu.mit.jwi_2.1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/intt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
