Add a preference page for the parameters of genetic algorithm

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -130,7 +130,7 @@
       <?gmfgen generated="true"?>
       <page
             id="reflexactoring.diagram.general"
-            name="%prefpage.reflexactoring.diagram.general"
+            name="Refleactoring"
             class="reflexactoring.diagram.preferences.DiagramGeneralPreferencePage">
       </page>
       <page
@@ -162,6 +162,12 @@
             class="reflexactoring.diagram.preferences.ProjectInfoPage"
             id="reflexactoring.diagram.projectInfo"
             name="Project Information">
+      </page>
+      <page
+            category="reflexactoring.diagram.general"
+            class="reflexactoring.diagram.preferences.RecommendSettingPage"
+            id="reflexactoring.diagram.recommend"
+            name="Recommend Settings">
       </page>
    </extension>
 
