--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -10,7 +10,8 @@ bin.includes = .,\
                lib/javabuilder.jar,\
                lib/pageranking.jar,\
                lib/optimization.jar,\
-               lib/Jama-1.0.3.jar
+               lib/colt.jar,\
+               lib/concurrent.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
