--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -115,6 +115,26 @@
                label="Remove from Scope">
          </action>
       </objectContribution>
+      <objectContribution
+            adaptable="false"
+            id="reflexactoring.diagram.highlightContribution"
+            objectClass="reflexactoring.diagram.edit.parts.ModuleDependencyEditPart">
+         <action
+               class="reflexactoring.diagram.action.popup.HighlightContributionAction"
+               id="reflexactoring.diagram.action.highlightContribution"
+               label="Highlight Contribution">
+         </action>
+      </objectContribution>
+      <objectContribution
+            adaptable="false"
+            id="reflexactoring.diagram.hideContribution"
+            objectClass="reflexactoring.diagram.edit.parts.ModuleDependencyEditPart">
+         <action
+               class="reflexactoring.diagram.action.popup.HideContributionAction"
+               id="reflexactoring.diagram.action.hideContribution"
+               label="Hide Contribution">
+         </action>
+      </objectContribution>
    </extension>
 	
    <extension point="org.eclipse.gmf.runtime.common.ui.services.action.globalActionHandlerProviders" id="global-actions">
