Support making some module *frozen*, that is, the member inside the module will not recommended to be moved out of it and the member outside module will not be recommended to move into it either.

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -70,6 +70,16 @@
             id="reflexactoring.diagram.module"
             objectClass="reflexactoring.diagram.edit.parts.ModuleEditPart">
          <action
+               class="reflexactoring.diagram.action.popup.UnfreezeMemberAction"
+               id="reflexactoring.diagram.action.unFreezeMemberAction"
+               label="Unfreeze Member">
+         </action>
+         <action
+               class="reflexactoring.diagram.action.popup.FreezeMemberAction"
+               id="reflexactoring.diagram.action.freezeMemberAction"
+               label="Freeze Member">
+         </action>
+         <action
                class="reflexactoring.diagram.action.popup.EditModuleDescriptionAction"
                id="reflexactoring.diagram.action.editdescription"
                label="Edit Name or Description">
