--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -818,7 +818,7 @@
       <view
             category="reflexactoring.diagram.view.category"
             class="reflexactoring.diagram.view.ModuleMemberForbiddenView"
-            icon="icons/view/forbid.gif"
+            icon="icons/view/forbid_member.gif"
             id="reflexactoring.diagram.view.moduleMemberForbidMap"
             name="Module-Member Forbidden List"
             restorable="true">
@@ -826,7 +826,7 @@
       <view
             category="reflexactoring.diagram.view.category"
             class="reflexactoring.diagram.view.ModuleTypeForbiddenView"
-            icon="icons/view/forbid.gif"
+            icon="icons/view/forbid_type.gif"
             id="reflexactoring.diagram.view.moduleUnitForbidMap"
             name="Module-Type Forbidden List"
             restorable="true">
